add http endpoint

--- a/my-happstack-project.cabal
+++ b/my-happstack-project.cabal
@@ -6,4 +6,4 @@ build-type:         Simple
 executable my-happstack-project
   main-is:          Main.hs
   hs-source-dirs:   app
-  build-depends:    base, filepath
+  build-depends:    base, filepath,happstack-server
